--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -41,8 +41,8 @@ jobs:
         with:
           distribution: 'temurin' # See 'Supported distributions' for available options
           java-version: '8'
-        run: |
-          mvn clean install
+      - name: Build with Maven
+        run: mvn clean install
 
       - name: Upload jar file as an artifact
         uses: actions/upload-artifact@v1
