--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -37,10 +37,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: building jar file
-      - uses: actions/setup-java@v3
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin' # See 'Supported distributions' for available options
           java-version: '8'
+
       - name: Build with Maven
         run: mvn clean install
 
