--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -52,8 +52,8 @@ jobs:
       - name: Upload jar file as an artifact
         uses: actions/upload-artifact@v1
         with:
-          name: employee-jdbc-0.0.1-SNAPSHOT
-          path: /target/employee-jdbc-0.0.1-SNAPSHOT.jar
+          name: employee-jdbc-jar
+          path: ./target/employee-*.jar
 
   deploy:
     name: Deploy
@@ -67,7 +67,7 @@ jobs:
       - name: Download artifact jar file from maven build stage
         uses: actions/download-artifact@v1
         with:
-          name: employee-jdbc-0.0.1-SNAPSHOT
+          name: employee-jdbc-jar
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@13d241b293754004c80624b5567555c4a39ffbe3
@@ -89,6 +89,7 @@ jobs:
           # Build a docker container and
           # push it to ECR so that it can
           # be deployed to ECS.
+          cp employee-jdbc-jar/*.jar employee-1.jar
           echo "printing all files"
           ls -al
           echo "printing image_tag"
