--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -50,10 +50,10 @@ jobs:
           ls -al
 
       - name: Upload jar file as an artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/actions/upload-artifact@v2
         with:
-          name: employee-jdbc-jar
-          path: ./target/employee-*.jar
+          name: employee-jdbc.jar
+          path: target/employee-*.jar
 
   deploy:
     name: Deploy
@@ -65,9 +65,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download artifact jar file from maven build stage
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v2
         with:
-          name: employee-jdbc-jar
+          name: employee-jdbc.jar
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@13d241b293754004c80624b5567555c4a39ffbe3
@@ -89,7 +89,7 @@ jobs:
           # Build a docker container and
           # push it to ECR so that it can
           # be deployed to ECS.
-          cp employee-jdbc-jar/*.jar employee-1.jar
+          cp employee-jdbc-jar/*.jar employee-jdbc-0.0.1-SNAPSHOT.jar
           echo "printing all files"
           ls -al
           echo "printing image_tag"
