--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -52,7 +52,7 @@ jobs:
       - name: Upload jar file as an artifact
         uses: actions/upload-artifact@v1
         with:
-          name: employee-jdbc.jar
+          name: target-artifact
           path: target/employee-jdbc-0.0.1-SNAPSHOT.jar
 
   deploy:
@@ -67,7 +67,7 @@ jobs:
       - name: Download artifact jar file from maven build stage
         uses: actions/download-artifact@v1
         with:
-          name: employee-jdbc.jar
+          name: target-artifact
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@13d241b293754004c80624b5567555c4a39ffbe3
