--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -17,8 +17,9 @@ on:
       - main
 
 env:
-  AWS_REGION: ap-south-1                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: spring_employee_data           # set this to your Amazon ECR repository name
+  AWS_REGION: ap-south-1  
+  ECR_LOGIN: 877760304415.dkr.ecr.ap-south-1.amazonaws.com                 # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY: spring-boot-employee-app           # set this to your Amazon ECR repository name
   ECS_SERVICE: spring_employee_data_service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: spring_employee_data_cluster              # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: spring_employee_data_task # set this to the path to your Amazon ECS task definition
@@ -77,15 +78,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@aaf69d68aa3fb14c1d5a6be9ac61fe15b48453a2
-
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: ${{ github.sha }}
+          IMAGE_TAG: latest
         run: |
           # Build a docker container and
           # push it to ECR so that it can
@@ -94,10 +90,10 @@ jobs:
           ls -al
           cp target-artifact/*.jar employee-jdbc-0.0.1-SNAPSHOT.jar
           echo "printing image_tag"
-          echo $IMAGE_TAG
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin $ECR_LOGIN          
+          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_LOGIN/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "::set-output name=image::$ECR_LOGIN/$ECR_REPOSITORY:$IMAGE_TAG"
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
