--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -92,6 +92,7 @@ jobs:
           echo "printing image_tag"
           aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin $ECR_LOGIN          
           docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
+          docker tag spring-boot-employee-app:latest $ECR_LOGIN/$ECR_REPOSITORY:$IMAGE_TAG
           docker push $ECR_LOGIN/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_LOGIN/$ECR_REPOSITORY:$IMAGE_TAG"
 
