--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -22,7 +22,7 @@ env:
   ECR_REPOSITORY: spring-boot-employee-app           # set this to your Amazon ECR repository name
   ECS_SERVICE: spring_employee_data_service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: spring_employee_data_cluster              # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: spring_employee_data_task # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: ecs_farget_task.json      # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: spring_employee_data_container           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
