--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -21,7 +21,7 @@ env:
   ECR_LOGIN: 877760304415.dkr.ecr.ap-south-1.amazonaws.com                 # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: spring-boot-employee-app           # set this to your Amazon ECR repository name
   ECS_SERVICE: spring_employee_data_service                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: spring_employee_data_cluster              # set this to your Amazon ECS cluster name
+  ECS_CLUSTER: springEcsCluster              # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: ecs_farget_task.json      # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: spring_employee_data_container           # set this to the name of the container in the
