--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -108,13 +108,15 @@ jobs:
         id: build-cluster
         run: |
           # aws ecs create-cluster --cluster-name $ECS_CLUSTER
-          aws ecs list-task-definitions
-          aws ecs create-service --cluster $ECS_CLUSTER --service-name $ECS_SERVICE --task-definition $ECS_TASK_NAME:1 --desired-count 1 --launch-type "FARGATE" --network-configuration "awsvpcConfiguration={subnets=[subnet-0b5c3b2362b48bcf2],securityGroups=[sg-0e675b3cfb27df138],assignPublicIp=ENABLED}"
-          # aws ecs create-service --cluster fargate-spring-cluster --service-name fargate-spring-service
-          aws ecs list-services --cluster fargate-cluster
-          aws ecs describe-services --cluster fargate-cluster --services fargate-service
-          aws ecs list-tasks --cluster fargate-cluster --service fargate-service
-
+          echo $(aws ecs list-task-definitions --family-prefix "$ECS_TASK_NAME" --status "Active") >> ActiveTaskArns.json
+          ActiveTaskArnName=`cat ActiveTaskArns.json | jq -r '.taskDefinitionArns[0]'`
+          IFS=', ' read -r -a arrayTask <<< "$ActiveTaskArnName"
+          echo "active task running" 
+          echo "${arrayTask[-1]}"
+          aws ecs create-service --cluster $ECS_CLUSTER --service-name $ECS_SERVICE --task-definition "${arrayTask[-1]}" --desired-count 1 --launch-type "FARGATE" --network-configuration "awsvpcConfiguration={subnets=[subnet-0b5c3b2362b48bcf2],securityGroups=[sg-0e675b3cfb27df138],assignPublicIp=ENABLED}"
+          aws ecs list-services --cluster $ECS_CLUSTER
+          aws ecs describe-services --cluster $ECS_CLUSTER --services $ECS_SERVICE
+          aws ecs list-tasks --cluster $ECS_CLUSTER --service $ECS_SERVICE
       # - name: Deploy Amazon ECS task definition
       #   uses: aws-actions/amazon-ecs-deploy-task-definition@de0132cf8cdedb79975c6d42b77eb7ea193cf28e
       #   with:
