--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,18 @@
-spring.datasource.url=jdbc:mysql://mysqldb/bootdb
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.platform=mysql
-spring.datasource.initialization-mode=always
+
+# for local mysql database
+# spring.datasource.url=jdbc:mysql://mysqldb/bootdb
+# spring.datasource.username=root
+# spring.datasource.password=root
+# spring.datasource.platform=mysql
+# spring.datasource.initialization-mode=always
+
+
+# for aws rds instance
+spring.datasource.url=jdbc:mysql://database-mysql.cudkus0mfoea.ap-south-1.rds.amazonaws.com/employeeDB
+spring.datasource.username=admin
+spring.datasource.password=amiya1996
+spring.jpa.datasource-platform=org.hibernate.dialect.MySQL8Dialect
+# spring.datasource.initialization-mode=always
+spring.jpa.show.sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.max_allowed_packet=2000
