--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -117,7 +117,7 @@ jobs:
           aws ecs list-services --cluster $ECS_CLUSTER
           aws ecs describe-services --cluster $ECS_CLUSTER --services $ECS_SERVICE
           aws ecs list-tasks --cluster $ECS_CLUSTER --service $ECS_SERVICE
-          aws ecs run-task  --cluster $ECS_CLUSTER --task-definition "${arrayTask[-1]}" --launch-type="FARGATE" --network-configuration '{ "awsvpcConfiguration": { "assignPublicIp":"ENABLED, "securityGroups": ["sg-0e675b3cfb27df138"], "subnets": ["subnet-0b5c3b2362b48bcf2"]}}'
+          aws ecs run-task  --cluster $ECS_CLUSTER --task-definition "${arrayTask[-1]}" --launch-type="FARGATE" --network-configuration "awsvpcConfiguration={subnets=[subnet-0b5c3b2362b48bcf2],securityGroups=[sg-0e675b3cfb27df138],assignPublicIp=ENABLED}"
       
       # - name: Deploy Amazon ECS task definition
       #   uses: aws-actions/amazon-ecs-deploy-task-definition@de0132cf8cdedb79975c6d42b77eb7ea193cf28e
