--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -114,9 +114,9 @@ jobs:
           echo "active task running" 
           echo "${arrayTask[-1]}"
           # aws ecs create-service --cluster $ECS_CLUSTER --service-name $ECS_SERVICE --task-definition "${arrayTask[-1]}" --desired-count 1 --launch-type "FARGATE" --network-configuration "awsvpcConfiguration={subnets=[subnet-0b5c3b2362b48bcf2],securityGroups=[sg-0e675b3cfb27df138],assignPublicIp=ENABLED}"
-          aws ecs list-services --cluster $ECS_CLUSTER
-          aws ecs describe-services --cluster $ECS_CLUSTER --services $ECS_SERVICE
-          aws ecs list-tasks --cluster $ECS_CLUSTER --service $ECS_SERVICE
+          # aws ecs list-services --cluster $ECS_CLUSTER
+          # aws ecs describe-services --cluster $ECS_CLUSTER --services $ECS_SERVICE
+          # aws ecs list-tasks --cluster $ECS_CLUSTER --service $ECS_SERVICE
           aws ecs run-task  --cluster $ECS_CLUSTER --task-definition "${arrayTask[-1]}" --launch-type="FARGATE" --network-configuration "awsvpcConfiguration={subnets=[subnet-0b5c3b2362b48bcf2],securityGroups=[sg-0e675b3cfb27df138],assignPublicIp=ENABLED}"
       
       # - name: Deploy Amazon ECS task definition
