--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,18 @@
 
 
 # for aws rds instance
-spring.datasource.url=jdbc:mysql://database-mysql.cudkus0mfoea.ap-south-1.rds.amazonaws.com/employeeDB
+spring.datasource.url=jdbc:mysql://mysql-rds-aws.cudkus0mfoea.ap-south-1.rds.amazonaws.com/employee_db_mysql
 spring.datasource.username=admin
 spring.datasource.password=amiya1996
 spring.jpa.datasource-platform=org.hibernate.dialect.MySQL8Dialect
-# spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
 spring.jpa.show.sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.max_allowed_packet=2000
+
+
+#curl --header "Content-Type: application/json" --request POST --data '{"empId":"232938","empName":"Shroff"}' http://localhost:8080/insertemployee
+
+#curl --header "Content-Type: application/json" --request GET http://localhost:8080/employees
+
+
